# Accent_RestSerializers

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  circle.yml  pyproject.toml  setup.py  test_requirements.txt
.github/workflows/: test.yml
rest_serializers/: __init__.py  exception_handlers.py  serializers.py  utils.py  validators.py
rest_serializers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rest_serializers/mixins/: __init__.py  base.py  create.py  eager_loading.py  update.py
scripts/: check  install  lint  test
tests/: models.py  settings.py  test_basic_many.py  test_reverse_fk.py  test_reverse_fk_deep.py  test_unique_together_validator.py
