[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rest_serializers"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Accent Design Group Ltd", email = "support@accentdesign.co.uk" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]
dependencies = [
    'djangorestframework<4.0.0',
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/AccentDesign/Accent_RestSerializers"

[project.optional-dependencies]
test = [
    "black",
    "ruff",
]

[tool.black]
line-length = 88

[tool.hatch.build.targets.sdist]
include = [
    "rest_serializers/"
]
exclude = [
    "tests/",
]

[tool.hatch.version]
path = "rest_serializers/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
